exchanged header background

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,11 @@
   All product names, logos, and brands are property of their respective owners.
   All company, product and service names used in this website are for
   identification purposes only. Use of these names, logos, and brands does not
-  imply endorsement.<br />
+  imply endorsement.<br /><br />
+  Clouds in Background from <a
+    href="https://www.freepik.com/free-vector/cartoon-white-clouds-icon-set-isolated-blue_14805788.htm#query=cloud%20svg&position=9&from_view=keyword&track=ais"
+    >Image by svstudioart</a
+  > on Freepik
 </footer>
 
 <style>
